fix(core): horizontal nav items were behind expansion panel
closes #199

--- a/typescript-version/full-version/src/@core/scss/placeholders/_default-layout-horizontal-nav.scss
+++ b/typescript-version/full-version/src/@core/scss/placeholders/_default-layout-horizontal-nav.scss
@@ -5,6 +5,8 @@
 %default-layout-horizontal-nav-navbar-and-nav-container {
   @include elevation.elevation(3);
 
+  // ℹ️ 1000 is v-window z-index
+  z-index: 1001;
   background-color: rgb(var(--v-theme-surface));
 
   &.header-blur {
